@@ -1,3 +1,8 @@
+2007-12-13  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* help/C/baobab.xml:
+        Updated help file 
+
 2007-12-02  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-prefs.c: (filechooser_response_cb):
